# Copyright (c) 2020 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build_overrides/chip.gni")

nrfconnect_target = get_label_info(":nrfconnect", "label_no_toolchain")

chip_device_platform = "nrfconnect"
chip_logging_style = "external"

chip_ble_project_config_include = "<CHIPProjectConfig.h>"
chip_device_project_config_include = "<CHIPProjectConfig.h>"
chip_project_config_include = "<CHIPProjectConfig.h>"
chip_inet_project_config_include = "<CHIPProjectConfig.h>"
chip_system_project_config_include = "<CHIPProjectConfig.h>"

chip_build_tests = false
chip_inet_config_enable_tun_endpoint = chip_build_tests
chip_inet_config_enable_raw_endpoint = chip_build_tests
chip_inet_config_enable_tcp_endpoint = chip_build_tests
chip_inet_config_enable_dns_resolver = chip_build_tests
chip_inet_config_enable_ipv4 = chip_build_tests
custom_toolchain = "//toolchain:zephyr"
